--- a/src/App.css
+++ b/src/App.css
@@ -19,23 +19,9 @@ h1{
     -webkit-text-fill-color: transparent;  */
 }
 
-.headertext a {
-  text-decoration: none;
-  color: dimgray; 
-  position: relative;
+.forwholist{
+  color: rgb(67, 67, 67);
+  font-size: medium;
+  font-weight: normal;
 }
 
-.headertext a::after {
-  content: '';
-  position: absolute; 
-  bottom: 0; 
-  left: 0; 
-  width: 0;
-  height: 2px; 
-  background-color: #006ACF; 
-  transition: width 0.3s ease;
-}
-
-.headertext a:hover::after {
-  width: 100%; 
-}
